--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.7.4",
@@ -31,6 +33,7 @@
     "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.3",
     "recharts": "^3.1.2",
+    "shadcn": "^3.0.0",
     "tailwind-merge": "^3.3.1",
     "three": "^0.179.1",
     "zod": "^4.1.5",
@@ -45,6 +48,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
