--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
+    "@tabler/icons-react": "^3.34.1",
     "@types/three": "^0.179.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
